fixed the frontend styling and positioning to display consistent looks and fixed spacing, all files inside of the views folder

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,7 +13,7 @@ nav {
 }
 
 li {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .nav-wrapper {
@@ -26,8 +26,9 @@ input {
 }
 
 h4 {
-  margin-top: 24px;
+    margin-top: 24px;
 }
+
 
 /* These make it so the input form text is white for all browsers*/
 
@@ -52,7 +53,7 @@ input:-ms-input-placeholder {
 }
 
 .body {
-    margin: 140px 0 80px 0;
+    margin: 140px 0 60px 0;
 }
 
 #headline {
@@ -60,7 +61,7 @@ input:-ms-input-placeholder {
     margin-bottom: 50px;
 }
 
-.login-row {
+.form-row {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -69,28 +70,20 @@ input:-ms-input-placeholder {
     border: 3px solid white;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.2);
-    width: 450px;
-    height: 500px;
-}
-
-.signup-row {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0px auto 0px auto;
-    border: 3px solid white;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.2);
-    width: 450px;
-    height: 500px;
+    width: 480px;
+    height: 520px;
 }
 
 .row {
     padding: 20px;
 }
 
+a {
+    color: white;
+}
+
 div .thought-row {
+    padding-top: 18px;
     margin: 130px auto 40px auto;
     width: 700px;
     height: 350px;
@@ -123,6 +116,10 @@ button {
 
 #about {
     margin-top: 100px;
+}
+
+label {
+    color: white;
 }
 
 .footer-container {
